// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copy-media-type should copy a media type to a folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`copy-media-type should copy a media type to root 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`copy-media-type should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
